# keyforge

./: .env  .gitignore  Cargo.toml  Dockerfile.hive  Justfile  README.md  code.txt  docker-compose.yml  hive.db  package-lock.json  package.json  perf.data  verify_system.py
benches/: scoring_bench.rs
crates/keyforge-cli/: Cargo.toml
crates/keyforge-cli/src/: main.rs
crates/keyforge-cli/src/cmd/: benchmark.rs  mod.rs  search.rs  validate.rs
crates/keyforge-cli/src/reports/: benchmarks.rs  grid.rs  mod.rs  tables.rs
crates/keyforge-cli/tests/: cli_tests.rs  poison_pill.rs  reproducibility.rs
crates/keyforge-core/: Cargo.toml
crates/keyforge-core/benches/: scoring_bench.rs
crates/keyforge-core/src/: api.rs  biometrics.rs  config.rs  consts.rs  core_types.rs  corpus.rs  crossover.rs  docker-compose.yml  geometry.rs  job.rs  keycodes.rs  layouts.rs  lib.rs  mod.rs  protocol.rs  util.rs  verifier.rs
crates/keyforge-core/src/geometry/: kle.rs
crates/keyforge-core/src/optimizer/: crossover.rs  delta.rs  initialization.rs  mod.rs  mutation.rs  runner.rs
crates/keyforge-core/src/optimizer/replica/: anneal.rs  delta.rs  mod.rs
crates/keyforge-core/src/scorer/: builder.rs  costs.rs  engine.rs  flow.rs  loader.rs  metrics.rs  mod.rs  physics.rs  types.rs
crates/keyforge-core/src/scorer/engine/: bigrams.rs  mod.rs  monograms.rs  trigrams.rs
crates/keyforge-core/tests/: api_test.rs  config_test.rs  corne.json  corpus_tests.rs  crossover_tests.rs  determinism.rs  dynamic_size_tests.rs  external_benchmarks.rs  flow_tests.rs  geometry_tests.rs  kle_tests.rs  layout_parsing.rs  lns_tests.rs  loader_tests.rs  ortho_30.json  physics_tests.rs  property_tests.rs  regression_tests.rs  reproducibility.rs  scorer_consistency.rs  scorer_tests.rs  simulation_test.rs  trace_sturdy.rs  verifier_tests.rs
crates/keyforge-core/tests/common/: mod.rs
crates/keyforge-hive/: Cargo.toml  schema.sql
crates/keyforge-hive/src/: auth.rs  db.rs  error.rs  main.rs  queue.rs  state.rs  store.rs
crates/keyforge-hive/src/routes/: jobs.rs  mod.rs  nodes.rs  results.rs  submission.rs  sync.rs  system.rs
crates/keyforge-node/: Cargo.toml
crates/keyforge-node/src/: calibration.rs  hw_detect.rs  main.rs  models.rs  nice.rs  worker.rs
crates/keyforge-node/tests/: integration_test.rs
crates/keyforge-protocol/: Cargo.toml  README.md
crates/keyforge-protocol/src/: config.rs  geometry.rs  job.rs  lib.rs  protocol.rs
crates/keyforge-protocol/src/geometry/: kle.rs
data/: cost_matrix.csv  keycodes.json  ortho_30.json  szr35.json  ui_categories.json
data/benchmarks/: cyanophage.json
data/corpora/default/: 1grams.csv  2grams.csv  3grams.csv  words.csv  words.txt
data/keyboards/: ansi_104.json  corne.json  ortho_30.json  szr35.json
data/weights/: ortho_split.json  testing.json
scripts/: preprocess.py  setup_dev.sh  verify_system.py
src/: api.rs  config.rs  error.rs  geometry.rs  layouts.rs  lib.rs  main.rs
src/cmd/: mod.rs  search.rs  validate.rs
src/geometry/: kle.rs
src/optimizer/: mod.rs  mutation.rs  runner.rs
src/reports/: mod.rs
src/scorer/: costs.rs  engine.rs  loader.rs  mod.rs  physics.rs  setup.rs  types.rs
tests/: api_test.rs  cli_tests.rs  config_test.rs  dynamic_size_tests.rs  external_benchmarks.rs  flow_tests.rs  geometry_tests.rs  kle_tests.rs  loader_tests.rs  ortho_30.json  physics_tests.rs  poison_pill.rs  property_tests.rs  regression_tests.rs  reproducibility.rs  scorer_tests.rs
tmp_poison_test/: poison_cost.csv
ui/: hive.db  package-lock.json  package.json
ui/src/: App.tsx  index.css  main.tsx  types.ts  utils.test.ts  utils.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs  mod.rs  models.rs  state.rs  utils.rs
ui/src-tauri/src/commands/: analysis.rs  arena.rs  config.rs  library.rs  mod.rs  search.rs  sync.rs
ui/src/components/: Arena.tsx  ArenaCanvas.tsx  Charts.tsx  ContextControls.tsx  Header.tsx  HistoryTable.tsx  Inspector.tsx  KeyPicker.tsx  KeyTester.tsx  KeyboardDesigner.tsx  KeyboardMap.tsx  NavRail.tsx  NetworkBar.tsx  OptimizerConfig.tsx  StatusBar.tsx  VisualBuilder.tsx  WorkspaceSelector.tsx
ui/src/components/panels/: AnalyzePanel.tsx  ArenaPanel.tsx  OptimizePanel.tsx
ui/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Label.tsx  Select.tsx
ui/src/context/: ArenaContext.tsx  KeyboardContext.tsx  LibraryContext.tsx  SessionContext.tsx  ToastContext.tsx
ui/src/services/: coverage.ts  keycode.ts  ngrams.ts  stats.ts
ui/src/views/: AnalyzeView.tsx  ArenaView.tsx  ConstructView.tsx  LayoutView.tsx  OptimizeView.tsx  SettingsView.tsx  TesterView.tsx
