[workspace]
members = [
    "crates/keyforge-core",
    "crates/keyforge-cli",
    "ui/src-tauri",
    "crates/keyforge-node",
    "crates/keyforge-hive",
    "crates/keyforge-protocol", # Added
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
