[package]
name = "keyforge-core"
version = "0.5.0"
edition = "2021"

[dependencies]
rayon = "1.8"
fastrand = "2.0"
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1"
itertools = "0.13"

# NEW: Hashing support
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
rstest = "0.26.1"
regex = "1.10"
criterion = { version = "0.8.0", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "scoring_bench"
harness = false
