[package]
name = "keyforge-hive"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal
keyforge-core = { path = "../keyforge-core" }

# Web Framework
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.7", features = ["cors", "trace", "fs", "limit"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

# CLI & Utils
clap = { version = "4.4", features = ["derive"] }
walkdir = "2"

# NEW: Error Handling
thiserror = "2.0.17"
anyhow = "1.0"
