[package]
name = "keyforge-hive"
version = "0.2.0"
edition = "2021"

[dependencies]
# Internal
keyforge-core = { path = "../keyforge-core" }

# Web Framework
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs", "limit"] }

# Database (PostgreSQL)
# "runtime-tokio" and "tls-rustls" are standard for async/secure builds
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Utilities
clap = { version = "4.4", features = ["derive"] }
walkdir = "2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"
