[package]
name = "keyforge-hive"
version = "0.2.1"
edition = "2021"

[dependencies]
keyforge-protocol = { path = "../keyforge-protocol" }
keyforge-core = { path = "../keyforge-core" }

axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs", "limit"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
clap = { version = "4.4", features = ["derive"] }
walkdir = "2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
