[package]
name = "keyforge-node"
version = "0.1.0"
edition = "2021"

[dependencies]
keyforge-core = { path = "../keyforge-core" }
sysinfo = "0.37.2"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async & Networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

# Missing dependency added here:
fastrand = "2.0"
