[package]
name = "keyforge-node"
version = "0.2.0"
edition = "2021"

[dependencies]
keyforge-core = { path = "../keyforge-core" }
sysinfo = "0.30.5"
clap = { version = "4.4", features = ["derive", "env"] } # ADDED "env"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastrand = "2.0"
num_cpus = "1.0"
rayon = "1.8"

# Async & Networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

# Hardware Detection
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "11.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading"] }

[dev-dependencies]
axum = "0.8.7"
