[package]
name = "ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.4", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging dependencies for the GUI process
tracing = "0.1"
tracing-subscriber = "0.3"

# LINK YOUR CORE ENGINE:
# Changed from 'keyforge' to 'keyforge-core' pointing to the crates directory
keyforge-core = { path = "../../crates/keyforge-core" }
