[package]
name = "ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Networking
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Randomness (For Arena word shuffling)
fastrand = "2.0"

# Internal
keyforge-core = { path = "../../crates/keyforge-core" }

# File Ops
tempfile = "3.8"

[dev-dependencies]
